--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -58,11 +58,11 @@ jobs:
       - name: Install workspace dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Run all workspace tests
+      - name: Run all workspace unit tests
         run: |
-          echo "🧪 Running all workspace tests (unit + integration)..."
-          pnpm run test:all
-          echo "✅ All workspace tests passed"
+          echo "🧪 Running all workspace unit tests..."
+          pnpm run test:unit
+          echo "✅ All workspace unit tests passed"
 
       - name: Create integration test environment file
         working-directory: integration-tests
@@ -154,6 +154,9 @@ jobs:
       - name: Run Echo Data Server Tests
         working-directory: integration-tests
         run: pnpm test:echo-data-server
+
+      - name: Run Echo Server Integration Tests
+        run: pnpm run test:integration:echo-server
 
       - name: Run OAuth Protocol Tests
         working-directory: integration-tests
