--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "build:server": "cd echo-server && pnpm run build && cd ..",
     "start:server": "cd echo-server && pnpm run start",
     "test": "pnpm run --recursive test",
-    "test:unit": "pnpm run --recursive test:unit",
+    "test:unit": "pnpm run --recursive --filter=!echo-server --filter=!integration-tests test",
     "test:integration": "cd integration-tests && pnpm test",
+    "test:integration:echo-server": "cd echo-server && pnpm test",
     "test:integration:watch": "cd integration-tests && pnpm test:watch",
-    "test:all": "pnpm run test:unit && pnpm run test:integration",
+    "test:all": "pnpm run test:unit && pnpm run test:integration && pnpm run test:integration:echo-server",
     "lint": "pnpm run --recursive lint",
     "lint:fix": "pnpm run --recursive lint:fix",
     "type-check": "pnpm run --recursive type-check",
