--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -185,7 +185,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 20
     needs: integration-tests
-    if: always()
+    if: github.event_name == 'push' || contains(github.event.pull_request.labels.*.name, 'run-e2e')
 
     steps:
       - name: Checkout code
