--- a/echo-next-sdk/package.json
+++ b/echo-next-sdk/package.json
@@ -32,7 +32,9 @@
   "author": "Echo Team",
   "license": "MIT",
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.16",
     "@merit-systems/echo-typescript-sdk": "^1.0.2",
+    "ai": "^5.0.17",
     "jwt-decode": "^4.0.0"
   },
   "peerDependencies": {
