--- a/examples/next-sdk-example/package.json
+++ b/examples/next-sdk-example/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.16",
     "@ai-sdk/react": "^2.0.17",
+    "@ai-sdk/rsc": "^1.0.18",
     "@merit-systems/echo-next-sdk": "workspace:*",
     "ai": "^5.0.17",
     "next": "15.4.7",
