--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "prisma generate && next build",
+    "build": "prisma generate && next build --turbopack",
     "start": "next start",
     "lint": "next lint",
     "setup-webhook": "node scripts/setup-webhook.js",
@@ -78,14 +78,14 @@
     "lucide-react": "^0.511.0",
     "motion": "^12.23.12",
     "nanoid": "^5.1.5",
-    "next": "15.3.3",
+    "next": "15.5.0",
     "next-auth": "5.0.0-beta.29",
     "next-path-matcher": "^1.0.2",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.4",
     "prisma": "^6.8.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.62.0",
     "recharts": "^2.15.4",
@@ -104,13 +104,19 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.1.10",
+    "@types/react-dom": "19.1.7",
     "eslint": "^9",
-    "eslint-config-next": "15.3.3",
+    "eslint-config-next": "15.5.0",
     "husky": "^9.0.0",
     "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5.0.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.1.10",
+      "@types/react-dom": "19.1.7"
+    }
   }
 }
