--- a/echo-next-sdk/package.json
+++ b/echo-next-sdk/package.json
@@ -43,7 +43,7 @@
     "jwt-decode": "^4.0.0"
   },
   "peerDependencies": {
-    "next": "^15.1.4"
+    "next": ">=15.0.0"
   },
   "devDependencies": {
     "@types/node": "^24.0.3",
