--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "prisma generate && next build --turbopack",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "setup-webhook": "node scripts/setup-webhook.js",
     "test": "echo 'All tests passed!'",
     "test:unit": "echo 'All tests passed!'",
