--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "prisma generate && next build",
+    "build": "prisma generate && next build --turbopack",
     "start": "next start",
     "lint": "eslint .",
     "setup-webhook": "node scripts/setup-webhook.js",
