--- a/echo-next-sdk/package.json
+++ b/echo-next-sdk/package.json
@@ -37,6 +37,7 @@
   "license": "MIT",
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.5",
+    "@ai-sdk/google": "^2.0.7",
     "@ai-sdk/openai": "^2.0.16",
     "@merit-systems/echo-typescript-sdk": "workspace:*",
     "ai": "^5.0.17",
