--- a/.github/workflows/publish-sdks.yml
+++ b/.github/workflows/publish-sdks.yml
@@ -19,6 +19,7 @@ jobs:
     outputs:
       typescript-published: ${{ steps.publish-typescript.outputs.published }}
       react-published: ${{ steps.publish-react.outputs.published }}
+      next-published: ${{ steps.publish-next.outputs.published }}
       version: ${{ steps.get-version.outputs.version }}
 
     steps:
@@ -138,11 +139,55 @@ jobs:
             echo "✅ Successfully published $PACKAGE_NAME"
           fi
 
+      # Next.js SDK
+      - name: Build Next.js SDK
+        working-directory: ./echo-next-sdk
+        run: |
+          echo "🔨 Building Next.js SDK..."
+          pnpm run build
+          echo "✅ Next.js SDK built"
+
+      - name: Test Next.js SDK
+        working-directory: ./echo-next-sdk
+        run: |
+          echo "🧪 Testing Next.js SDK..."
+          pnpm run test
+          pnpm run type-check
+          echo "✅ Next.js SDK tests passed"
+
+      - name: Check and publish Next.js SDK
+        id: publish-next
+        working-directory: ./echo-next-sdk
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          PACKAGE_NAME=$(node -p "require('./package.json').name")
+          PACKAGE_VERSION=$(node -p "require('./package.json').version")
+          FORCE_PUBLISH="${{ github.event.inputs.force_publish }}"
+
+          if npm view "$PACKAGE_NAME@$PACKAGE_VERSION" version 2>/dev/null; then
+            if [ "$FORCE_PUBLISH" = "true" ]; then
+              echo "⚠️  Version $PACKAGE_VERSION of $PACKAGE_NAME already exists on npm, but force_publish is enabled"
+              echo "🚀 Publishing $PACKAGE_NAME to npm..."
+              npm publish --access public
+              echo "published=true" >> $GITHUB_OUTPUT
+              echo "✅ Successfully published $PACKAGE_NAME"
+            else
+              echo "❌ Version $PACKAGE_VERSION of $PACKAGE_NAME already exists on npm - skipping"
+              echo "published=false" >> $GITHUB_OUTPUT
+            fi
+          else
+            echo "🚀 Publishing $PACKAGE_NAME to npm..."
+            npm publish --access public
+            echo "published=true" >> $GITHUB_OUTPUT
+            echo "✅ Successfully published $PACKAGE_NAME"
+          fi
+
   create-tag:
     name: Create version tag
     runs-on: ubuntu-latest
     needs: publish
-    if: (needs.publish.outputs.typescript-published == 'true' || needs.publish.outputs.react-published == 'true') && github.ref == 'refs/heads/production' && !startsWith(github.ref, 'refs/tags/')
+    if: (needs.publish.outputs.typescript-published == 'true' || needs.publish.outputs.react-published == 'true' || needs.publish.outputs.next-published == 'true') && github.ref == 'refs/heads/production' && !startsWith(github.ref, 'refs/tags/')
 
     steps:
       - name: Checkout code
@@ -202,11 +247,13 @@ jobs:
             This release includes updates to the following packages:
             - \`@merit-systems/echo-typescript-sdk\`
             - \`@merit-systems/echo-react-sdk\`
+            - \`@merit-systems/echo-next-sdk\`
 
             ### Installation
             \`\`\`bash
             npm install @merit-systems/echo-typescript-sdk
             npm install @merit-systems/echo-react-sdk
+            npm install @merit-systems/echo-next-sdk
             \`\`\`
 
             This tag was automatically created after successful npm publishing from the production branch.
