--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.5",
@@ -85,6 +86,7 @@
     "postcss": "^8.5.4",
     "prisma": "^6.8.2",
     "react": "19.1.1",
+    "react-day-picker": "^9.9.0",
     "react-dom": "19.1.1",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.62.0",
