--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -88,6 +88,7 @@
     "react": "19.1.1",
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.1",
+    "react-dropzone": "^14.3.8",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.62.0",
     "recharts": "^2.15.4",
