--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -70,6 +70,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.0",
     "fumadocs-core": "^15.6.12",
     "fumadocs-mdx": "^11.7.5",
