--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -37,6 +37,7 @@
     "@opentelemetry/sdk-trace-base": "1.26.0",
     "@prisma/client": "^6.13.0",
     "@prisma/nextjs-monorepo-workaround-plugin": "^6.12.0",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
