--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -85,6 +85,7 @@
     "next-auth": "5.0.0-beta.29",
     "next-path-matcher": "^1.0.2",
     "next-themes": "^0.4.6",
+    "octokit": "^5.0.3",
     "postcss": "^8.5.4",
     "prisma": "^6.8.2",
     "react": "19.1.1",
