--- a/echo-next-sdk/package.json
+++ b/echo-next-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@merit-systems/echo-next-sdk",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Next.js SDK for Echo",
   "type": "module",
   "main": "./dist/index.js",
@@ -36,7 +36,7 @@
   "author": "Merit Systems",
   "license": "MIT",
   "dependencies": {
-    "@merit-systems/echo-typescript-sdk": "workspace:*",
+    "@merit-systems/echo-typescript-sdk": "1.0.3",
     "ai": "^5.0.17",
     "jwt-decode": "^4.0.0"
   },
