--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -48,11 +48,11 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.13",
-    "@shikijs/core": "^3.9.2",
-    "@shikijs/engine-javascript": "^3.9.2",
-    "@shikijs/langs": "^3.9.2",
-    "@shikijs/themes": "^3.9.2",
-    "@shikijs/types": "^3.9.2",
+    "@shikijs/core": "^3.11.0",
+    "@shikijs/engine-javascript": "^3.11.0",
+    "@shikijs/langs": "^3.11.0",
+    "@shikijs/themes": "^3.11.0",
+    "@shikijs/types": "^3.11.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.84.1",
@@ -70,9 +70,9 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.23.0",
-    "fumadocs-core": "^15.6.12",
-    "fumadocs-mdx": "^11.7.5",
-    "fumadocs-ui": "^15.6.12",
+    "fumadocs-core": "^15.7.1",
+    "fumadocs-mdx": "^11.8.0",
+    "fumadocs-ui": "^15.7.1",
     "hast-util-to-jsx-runtime": "^2.3.6",
     "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
@@ -89,8 +89,11 @@
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.62.0",
     "recharts": "^2.15.4",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-mdx": "^3.1.0",
     "server-only": "^0.0.1",
-    "shiki": "^3.9.2",
+    "shiki": "^3.11.0",
     "sonner": "^2.0.7",
     "stripe": "^18.2.1",
     "superjson": "^2.2.2",
