--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -27,6 +27,7 @@
     "@headlessui/react": "^2.2.4",
     "@hookform/resolvers": "^5.2.1",
     "@icons-pack/react-simple-icons": "^13.7.0",
+    "@merit-systems/echo-typescript-sdk": "^1.0.3",
     "@number-flow/react": "^0.5.10",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "0.57.2",
@@ -72,6 +73,7 @@
     "framer-motion": "^12.23.0",
     "fumadocs-core": "^15.7.1",
     "fumadocs-mdx": "^11.8.0",
+    "fumadocs-typescript": "^4.0.6",
     "fumadocs-ui": "^15.7.1",
     "hast-util-to-jsx-runtime": "^2.3.6",
     "jose": "^6.0.11",
