--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -102,6 +102,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7",
+    "ts-morph": "^26.0.0",
     "viem": "^2.33.3",
     "x402-next": "^0.5.0",
     "zod": "^4.0.15"
