--- a/echo-next-sdk/package.json
+++ b/echo-next-sdk/package.json
@@ -26,7 +26,7 @@
     "test:unit": "echo 'no tests'",
     "test:watch": "echo 'no tests'",
     "prepublishOnly": "pnpm run build",
-    "prepare": "tsup src/index.ts --dts --format esm,cjs --out-dir dist"
+    "prepare": "tsup src/index.ts src/client.ts --dts --format esm --out-dir dist"
   },
   "keywords": [
     "echo",
