--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -65,8 +65,10 @@
     "@trpc/react-query": "^11.4.4",
     "@trpc/server": "^11.4.4",
     "@types/mdx": "^2.0.13",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^0.25.1",
     "@vercel/otel": "^1.13.0",
+    "@vercel/speed-insights": "^1.2.0",
     "autonumeric": "^4.10.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
