--- a/echo-typescript-sdk/package.json
+++ b/echo-typescript-sdk/package.json
@@ -23,9 +23,10 @@
     "test:watch": "vitest --watch",
     "get-models": "tsx scripts/get-available-models.ts",
     "update-models": "tsx scripts/update-models.ts",
-    "update-models:openai": "tsx scripts/update-models.ts openai",
+    "update-models:openai": "tsx scripts/update-openai-models.ts",
     "update-models:anthropic": "tsx scripts/update-anthropic-models.ts",
-    "update-models:gemini": "tsx scripts/update-models.ts gemini",
+    "update-models:gemini": "tsx scripts/update-gemini-models.ts",
+    "update-models:openrouter": "tsx scripts/update-openrouter-models.ts",
     "prebuild": "pnpm run update-models",
     "prepublishOnly": "pnpm run build"
   },
