--- a/echo-server/package.json
+++ b/echo-server/package.json
@@ -9,7 +9,7 @@
     "setup-prisma": "pnpm run copy-schema && pnpm run prisma:generate",
     "copy-prisma": "pnpm run setup-prisma",
     "copy-prisma-to-dist": "mkdir -p dist/generated && cp -r src/generated/prisma dist/generated/",
-    "prebuild": "pnpm run copy-schema && if [ -n \"$DATABASE_URL\" ]; then pnpm run prisma:generate; else echo 'Skipping Prisma generation - DATABASE_URL not set'; fi",
+    "prebuild": "pnpm run copy-schema && pnpm run prisma:generate",
     "predev": "pnpm run copy-prisma",
     "prestart": "pnpm run copy-prisma",
     "dev": "npx tsx src/server.ts",
