--- a/echo-typescript-sdk/package.json
+++ b/echo-typescript-sdk/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.4",
   "description": "TypeScript SDK for Echo platform",
   "type": "module",
-  "main": "./dist/index.js",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     }
   },
   "scripts": {
