--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -94,6 +94,7 @@
     "octokit": "^5.0.3",
     "postcss": "^8.5.4",
     "prisma": "^6.8.2",
+    "radix-ui": "^1.4.3",
     "react": "19.1.1",
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.1",
