--- a/echo-server/package.json
+++ b/echo-server/package.json
@@ -47,6 +47,7 @@
     "@opentelemetry/exporter-logs-otlp-http": "^0.203.0",
     "@opentelemetry/resources": "1.26.0",
     "@opentelemetry/sdk-logs": "0.57.2",
+    "@opentelemetry/semantic-conventions": "^1.36.0",
     "@opentelemetry/winston-transport": "^0.14.1",
     "@prisma/client": "^6.8.2",
     "@types/compression": "^1.7.5",
