--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -92,6 +92,8 @@
     "next-themes": "^0.4.6",
     "octokit": "^5.0.3",
     "postcss": "^8.5.4",
+    "posthog-js": "^1.260.3",
+    "posthog-node": "^5.8.0",
     "prisma": "^6.8.2",
     "react": "19.1.1",
     "react-day-picker": "^9.9.0",
