--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -32,6 +32,7 @@
     "@number-flow/react": "^0.5.10",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "0.57.2",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.203.0",
     "@opentelemetry/instrumentation": "0.57.2",
     "@opentelemetry/resources": "1.26.0",
     "@opentelemetry/sdk-logs": "0.57.2",
