--- a/echo-server/package.json
+++ b/echo-server/package.json
@@ -45,8 +45,10 @@
     "@opentelemetry/api-logs": "0.57.2",
     "@opentelemetry/auto-instrumentations-node": "^0.57.0",
     "@opentelemetry/exporter-logs-otlp-http": "^0.203.0",
-    "@opentelemetry/resources": "1.26.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "0.203.0",
+    "@opentelemetry/resources": "^2.0.1",
     "@opentelemetry/sdk-logs": "0.57.2",
+    "@opentelemetry/sdk-metrics": "2.0.1",
     "@opentelemetry/semantic-conventions": "^1.36.0",
     "@opentelemetry/winston-transport": "^0.14.1",
     "@prisma/client": "^6.8.2",
