--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,6 +7,7 @@ packages:
   - echo-authjs-provider
   - integration-tests
   - examples/*
+  - smoke/**
 allowBuiltDependencies:
   - '@prisma/client'
   - '@prisma/engines'
