--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -118,6 +118,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "husky": "^9.0.0",
+    "prettier": "^3.6.2",
     "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5.0.0"
