--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -31,6 +31,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@icons-pack/react-simple-icons": "^13.7.0",
     "@merit-systems/echo-typescript-sdk": "1.0.6",
+    "@merit-systems/sdk": "^0.0.7",
     "@number-flow/react": "^0.5.10",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "0.57.2",
