--- a/echo-server/package.json
+++ b/echo-server/package.json
@@ -70,6 +70,7 @@
     "register": "link:@opentelemetry/auto-instrumentations-node/register",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
+    "uuid": "^11.1.0",
     "viem": "^2.33.3",
     "winston": "^3.17.0"
   },
