--- a/echo-next-sdk/package.json
+++ b/echo-next-sdk/package.json
@@ -37,7 +37,7 @@
   "author": "Merit Systems",
   "license": "MIT",
   "dependencies": {
-    "@merit-systems/echo-typescript-sdk": "1.0.10",
+    "@merit-systems/echo-typescript-sdk": "workspace:*",
     "ai": "^5.0.17",
     "jwt-decode": "^4.0.0"
   },
