--- a/packages/sdk/ts/package.json
+++ b/packages/sdk/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@merit-systems/echo-typescript-sdk",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "description": "TypeScript SDK for Echo platform",
   "type": "module",
   "main": "./dist/index.cjs",
@@ -55,11 +55,26 @@
   "files": [
     "dist/**/*"
   ],
-  "dependencies": {
-    "@ai-sdk/anthropic": "^2.0.6",
-    "@ai-sdk/google": "^2.0.7",
-    "@ai-sdk/openai": "^2.0.16",
+  "peerDependencies": {
+    "@ai-sdk/anthropic": "^2.0.17",
+    "@ai-sdk/google": "^2.0.14",
+    "@ai-sdk/openai": "^2.0.32",
     "@openrouter/ai-sdk-provider": "^1.2.0",
-    "ai": "^5.0.18"
-  }
+    "ai": "^5.0.47"
+  },
+  "peerDependenciesMeta": {
+    "@ai-sdk/anthropic": {
+      "optional": true
+    },
+    "@ai-sdk/google": {
+      "optional": true
+    },
+    "@ai-sdk/openai": {
+      "optional": true
+    },
+    "@openrouter/ai-sdk-provider": {
+      "optional": true
+    }
+  },
+  "dependencies": {}
 }
