--- a/templates/next-chat/package.json
+++ b/templates/next-chat/package.json
@@ -9,16 +9,20 @@
     "lint": "biome check --write"
   },
   "dependencies": {
+    "@ai-sdk/react": "^2.0.44",
     "@merit-systems/echo-next-sdk": "^0.0.20",
+    "@merit-systems/echo-react-sdk": "^1.0.29",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "ai": "^5.0.35",
+    "autonumeric": "^4.10.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
