--- a/packages/app/control/package.json
+++ b/packages/app/control/package.json
@@ -122,6 +122,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@faker-js/faker": "^9.9.0",
+    "@next/eslint-plugin-next": "^15.5.3",
     "@types/node": "^20",
     "@types/react": "19.1.10",
     "@types/react-dom": "19.1.7",
@@ -131,6 +132,7 @@
     "prettier": "^3.6.2",
     "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.6",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "typescript-eslint": "^8.34.1"
   }
 }
