--- a/packages/app/control/package.json
+++ b/packages/app/control/package.json
@@ -21,9 +21,12 @@
     "prisma:migrate-deploy": "pnpx prisma migrate deploy",
     "check-types": "next typegen && tsc --noEmit",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "postinstall": "fumadocs-mdx",
     "seed-referral-rewards": "tsx scripts/seed-referral-rewards.ts",
-    "seed-markup-rewards": "tsx scripts/seed-markup-rewards.ts  --transactions 50 --days 14"
+    "seed-markup-rewards": "tsx scripts/seed-markup-rewards.ts  --transactions 50 --days 14",
+    "knip": "knip",
+    "ci-checks": "pnpm knip && pnpm format:check && pnpm check-types"
   },
   "dependencies": {
     "@auth/core": "^0.40.0",
@@ -130,6 +133,7 @@
     "eslint-config-next": "15.5.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "husky": "^9.0.0",
+    "knip": "^5.63.1",
     "prettier": "^3.6.2",
     "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.6",
