--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -93,7 +93,7 @@ RUN pnpm install
 
 # Build only what's needed for the server
 WORKDIR /app
-RUN SKIP_ENV_VALIDATION=true turbo run build --filter=echo-server... --no-deps
+RUN SKIP_ENV_VALIDATION=true pnpm exec turbo run build --filter=echo-server
 
 # Generate Prisma client and copy schema for server
 WORKDIR /app/packages/app/control
