--- a/templates/react-chat/package.json
+++ b/templates/react-chat/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "postinstall": "npm dedupe || true"
+    "postinstall": "npm dedupe || true",
     "preview": "vite preview"
   },
   "dependencies": {
