--- a/templates/next-image/package.json
+++ b/templates/next-image/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "@ai-sdk/openai": "2.0.16",
     "@merit-systems/echo-next-sdk": "0.0.20",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "ai": "5.0.19",
+    "autonumeric": "^4.10.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.263.1",
