--- a/templates/react-chat/package.json
+++ b/templates/react-chat/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
@@ -24,6 +25,7 @@
     "@types/node": "^24.4.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "5.0.19",
+    "autonumeric": "^4.10.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
