--- a/templates/react-image/package.json
+++ b/templates/react-image/package.json
@@ -11,11 +11,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@merit-systems/echo-react-sdk": "^1.0.28",
-    "ai": "5.0.19",
     "@ai-sdk/react": "2.0.17",
+    "@merit-systems/echo-react-sdk": "^1.0.28",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "ai": "5.0.19",
+    "autonumeric": "^4.10.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "use-sync-external-store": "^1.5.0"
   },
   "overrides": {
