--- a/packages/app/control/package.json
+++ b/packages/app/control/package.json
@@ -22,16 +22,19 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "postinstall": "fumadocs-mdx",
     "seed-referral-rewards": "tsx scripts/seed-referral-rewards.ts",
-    "seed-markup-rewards": "tsx scripts/seed-markup-rewards.ts  --transactions 50 --days 14"
+    "seed-markup-rewards": "tsx scripts/seed-markup-rewards.ts  --transactions 50 --days 14",
+    "mcp-server": "tsx docs/mcp-server/index.ts"
   },
   "dependencies": {
     "@auth/core": "^0.40.0",
     "@auth/prisma-adapter": "^2.10.0",
-    "@coinbase/x402": "^0.5.0",
     "@hookform/resolvers": "^5.2.1",
     "@icons-pack/react-simple-icons": "^13.7.0",
     "@merit-systems/echo-typescript-sdk": "1.0.14",
     "@merit-systems/sdk": "0.0.8",
+    "@modelcontextprotocol/sdk": "^1.18.1",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "@number-flow/react": "^0.5.10",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "0.57.2",
@@ -124,6 +127,8 @@
     "@types/node": "^20",
     "@types/react": "19.1.10",
     "@types/react-dom": "19.1.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "husky": "^9.0.0",
