--- a/templates/react-image/package.json
+++ b/templates/react-image/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@types/node": "^24.5.2",
     "ai": "5.0.19",
     "autonumeric": "^4.10.9",
     "class-variance-authority": "^0.7.1",
