--- a/packages/app/control/package.json
+++ b/packages/app/control/package.json
@@ -23,7 +23,11 @@
     "postinstall": "fumadocs-mdx",
     "seed-referral-rewards": "tsx scripts/seed-referral-rewards.ts",
     "seed-markup-rewards": "tsx scripts/seed-markup-rewards.ts  --transactions 50 --days 14",
-    "mcp-server": "tsx docs/mcp-server/index.ts"
+    "mcp-server:dev": "tsx docs/mcp-server/index.ts",
+    "mcp-server:start": "tsx docs/mcp-server/dist/index.js",
+    "mcp-server:clean": "rm -rf docs/mcp-server/dist",
+    "mcp-server:build": "npm run mcp-server:clean && tsc -p docs/mcp-server/tsconfig.build.json",
+    "mcp-server:upsert-docs": "tsx docs/mcp-server/vector-store/upsert-docs.ts"
   },
   "dependencies": {
     "@auth/core": "^0.40.0",
@@ -33,8 +37,6 @@
     "@merit-systems/echo-typescript-sdk": "1.0.14",
     "@merit-systems/sdk": "0.0.8",
     "@modelcontextprotocol/sdk": "^1.18.1",
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
     "@number-flow/react": "^0.5.10",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "0.57.2",
@@ -73,6 +75,7 @@
     "@trpc/server": "^11.4.4",
     "@types/mdx": "^2.0.13",
     "@upstash/qstash": "^2.8.3",
+    "@upstash/vector": "^1.2.2",
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^0.25.1",
     "@vercel/otel": "^1.13.0",
@@ -80,7 +83,11 @@
     "autonumeric": "^4.10.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "@coinbase/x402": "^0.6.4",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.2",
     "fumadocs-core": "^15.7.11",
     "fumadocs-mdx": "^11.9.1",
     "fumadocs-typescript": "^4.0.8",
@@ -124,11 +131,11 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@faker-js/faker": "^9.9.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "19.1.10",
     "@types/react-dom": "19.1.7",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "husky": "^9.0.0",
